namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thunderdome-k3d
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
